# bridgefan-tbs-game

./: CMakeLists.txt  LICENSE (json-cpp).txt  README.md  main.cpp  run.sh
include/: Battle.cpp  Battle.h  Data.cpp  Data.hpp  LoadingScreen.cpp  LoadingScreen.hpp  Settings.cpp  Settings.hpp  ability.cpp  ability.hpp  bfUI.cpp  bfUI.hpp  building.cpp  building.hpp  city.cpp  city.hpp  mainMenu.cpp  mainMenu.hpp  map.cpp  map.hpp  path.cpp  path.hpp  player.cpp  player.hpp  tile.cpp  tile.hpp  ui.cpp  ui.hpp  unit.cpp  unit.hpp
include/basic/: constants.hpp  megaTexture.cpp  megaTexture.hpp  my_vector.cpp  my_vector.hpp
lib/SelbaWard/: BitmapFont.cpp  ConsoleScreen.cpp  NinePatch.cpp  PixelDisplay.hpp  Spline.cpp
